# watchflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT_SUMMARY.md  QUICKSTART.md
examples/: simple-python.yaml  watchflow.yaml
src/watchflow/: __init__.py  __main__.py  cli.py  exceptions.py
src/watchflow/config/: __init__.py  models.py  validator.py
src/watchflow/core/: __init__.py  engine.py  executor.py  watcher.py
src/watchflow/detection/: __init__.py  detector.py  tools.py
src/watchflow/ui/: __init__.py  renderer.py  themes.py
src/watchflow/utils/: __init__.py  logger.py  templates.py
tests/: __init__.py  conftest.py  test_config.py  test_detector.py  test_executor.py  test_new_features.py  test_templates.py  test_tools.py  test_ui.py  test_utils.py
